# DirectIA

./: .env-example  .gitignore  README.md  package.json  pyproject.toml
src/: index.ts  interface.py  main.py
src/data/: profiles.txt
src/handlers/: file_handler.py  gpt_handler.py  instagram_handler.py  time_handler.py
