[tool.poetry]
name = "thps"
version = "0.1.0"
description = ""
authors = ["David Ambrozio <davidambroziodev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.29.0"
fastapi = "^0.115.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
